--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -19,21 +19,21 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
+tr:
   hello: "Hello world"
   will_paginate:
-    previous_label: "&#8592; Previous"
-    next_label: "Next &#8594;"
+    previous_label: "&#8592; Önceki"
+    next_label: "Sonraki &#8594;"
     page_gap: "&hellip;"
     page_entries_info:
       single_page:
-        zero:  "No %{model} found"
-        one:   "Displaying 1 %{model}"
-        other: "Displaying all %{count} %{model}"
+        zero:  "Hiç dergi bulunamadı"
+        one:   "1 dergiyi gösteriyor"
+        other: "%{count} derginin hepsini gösteriyor"
       single_page_html:
-        zero:  "No %{model} found"
-        one:   "Displaying <b>1</b> %{model}"
-        other: "Displaying <b>all&nbsp;%{count}</b> %{model}"
+        zero:  "Hiç dergi bulunamadı"
+        one:   "<b>1</b> dergiyi gösteriyor"
+        other: "<b>Tüm&nbsp;%{count}</b> dergiyi gösteriyor"
 
-      multi_page: "Displaying %{model} %{from} - %{to} of %{count} in total"
-      multi_page_html: "Displaying %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> of <b>%{count}</b> in total"
+      multi_page: "Toplam %{count} tane dergiden %{from} - %{to} aralığını gösteriyor"
+      multi_page_html: "Toplam %{count} tane dergiden <b>%{from} - %{to}</b> aralığını gösteriyor"
